Created AviationStudentService