@@ -2,7 +2,6 @@ package edu.ksu.canvas.aviation.controller;
 
 import java.text.SimpleDateFormat;
 import java.util.Date;
-import java.util.List;
 
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,11 +18,9 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.servlet.ModelAndView;
 
 import edu.ksu.canvas.aviation.entity.AviationStudent;
-import edu.ksu.canvas.aviation.entity.Makeup;
 import edu.ksu.canvas.aviation.form.MakeupForm;
 import edu.ksu.canvas.aviation.form.MakeupValidator;
-import edu.ksu.canvas.aviation.repository.AviationStudentRepository;
-import edu.ksu.canvas.aviation.repository.MakeupRepository;
+import edu.ksu.canvas.aviation.services.AviationStudentService;
 import edu.ksu.canvas.aviation.services.MakeupService;
 import edu.ksu.canvas.error.NoLtiSessionException;
 import edu.ksu.lti.model.LtiSession;
@@ -38,12 +35,9 @@ public class MakeupController extends AviationBaseController {
     
     @Autowired
     private MakeupService makeupService;
-    
+
     @Autowired
-    private AviationStudentRepository studentRepository;
-    
-    @Autowired
-    private MakeupRepository makeupRepository;
+    private AviationStudentService studentService;
     
     @Autowired
     private MakeupValidator validator;
@@ -65,16 +59,8 @@ public class MakeupController extends AviationBaseController {
     }
 
     private ModelAndView studentMakeup(String sectionId, String studentId, boolean addEmptyEntry) {
-        AviationStudent student = studentRepository.findByStudentId(new Long(studentId));
-        List<Makeup> makeups = makeupRepository.findByAviationStudentOrderByDateOfClassAsc(student);
-        if(addEmptyEntry) {
-            makeups.add(new Makeup());
-        }
-        
-        MakeupForm makeupForm = new MakeupForm();
-        makeupForm.setEntriesFromMakeEntities(makeups);
-        makeupForm.setSectionId(Long.valueOf(sectionId));
-        makeupForm.setStudentId(Long.valueOf(studentId));
+        AviationStudent student = studentService.getStudent(new Long(studentId));
+        MakeupForm makeupForm = makeupService.createMakeupForm(Long.valueOf(studentId), Long.valueOf(sectionId), addEmptyEntry);
         
         ModelAndView page = new ModelAndView("studentMakeup");
         page.addObject("sectionId", sectionId);
@@ -103,7 +89,7 @@ public class MakeupController extends AviationBaseController {
             String errorMessage = "Please correct user input and try saving again.";
             
             ModelAndView page = new ModelAndView("studentMakeup");
-            AviationStudent student = studentRepository.findByStudentId(makeupForm.getStudentId());
+            AviationStudent student = studentService.getStudent(makeupForm.getStudentId());
             page.addObject("sectionId", String.valueOf(makeupForm.getSectionId()));
             page.addObject("student", student);
             page.addObject("makeupForm", makeupForm);
